--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -4,7 +4,7 @@
       %span.post-description
         .an_image(style="width:120px;height:120px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 120)});border-radius:100px;border:4px solid white;display:block;margin:auto;margin-bottom:20px;")
         By
-        =link_to post.author.name, post.author.url
+        = (post.author.deleted_at.nil?) ? link_to(post.author.name, post.author.url) : post.author.name
         %br
         on
         =(post.posted_on.present? ? post.posted_on.strftime("%B %e, %Y") : post.created_at.strftime("%B %e, %Y"))
