Revert "Modify migration and commit schema"
This reverts commit 9ff6f651bea50495083527b2348e08ac310c1f04.

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -357,6 +357,16 @@ footer .small-line {
   background: $dark-blue;
 }
 
+#footer-tweet h2 {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 18px;
+    color: $dark-blue;
+    text-transform: uppercase;
+    line-height: 125%;
+    display: inline-block;
+    margin-left: 50px;
+}
+
 .footer-gotop-ribbon {
   content: ' ';
   width: 50px;
