switches to correct asset paths

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -6,20 +6,20 @@
     .row.big-icons
       .four.columns
         .coffee
-          %img{:alt => "", :src => "/assets/coffee.png"}
+          =image_tag('coffee.png', alt: 'coffee cup')
           %h3 Coffee consumed
           %h2 1,978
           %p cups this year
       .four.columns
         .tracks.b
-          %img{:alt => "", :src => "/assets/headphones.png"}
+          =image_tag('headphones.png', alt: 'headphones')
           %h3 Tracks played
           %h2 3,645
           %p
             %a{:href => "http://turntable.fm/salad_labs"} http://turntable.fm/salad_labs
       .four.columns
         .food.b
-          %img{:alt => "", :src => "/assets/food.png"}
+          =image_tag('food.png', 'food')
           %h3 Favorite food
           %h2 39
           %p Thai-food orders this year
