--- a/app/views/quotes/_random_quote.html.haml
+++ b/app/views/quotes/_random_quote.html.haml
@@ -1,6 +1,6 @@
 .random_quote
   .graytext=random_quote.text
   .author
-    %img{:alt => "", :src => "/assets/person.png"}/
+    =image_tag('person.png', alt: 'person')
     #{random_quote.author}
 
