--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,11 +28,15 @@
       .star-header#footer-tweet
         %h2 Last tweet
         %p#tweet-box
+          %li
+            %span #{formatted_tweet}
+            %br/
+            %br/
+            .days
+              -unless latest_tweet.user.screen_name = "system_error"
+                = link_to relative_tweet_date, tweet_url, :target => "_blank"
         = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
           Follow Us
-      %div{:id => "footer-tweet"}
-        :javascript
-          twitterCallback2 ("#{latest_tweet.user.screen_name}", "#{escape_javascript latest_tweet.text}", "#{latest_tweet.id.to_s}", "#{latest_tweet.created_at.strftime("%b %d, %Y %H:%M")}");
 
     %h2.contact-heading
       Shoot us an email at
