fixes typo on about page

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -19,7 +19,7 @@
             %a{:href => "http://turntable.fm/salad_labs"} http://turntable.fm/salad_labs
       .four.columns
         .food.b
-          =image_tag('food.png', 'food')
+          =image_tag('food.png', alt: 'food')
           %h3 Favorite food
           %h2 39
           %p Thai-food orders this year
