--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -59,6 +59,7 @@
   width: 100%;
   height: 700px !important;
 
+
   .slide {
     width: 100%;
     left: -1000px;
@@ -89,9 +90,155 @@
     margin-bottom: 0px;
   }
 
+
 }
 
+#mission-statement {
+  height: 550px;
+  width: 100%;
+  background-color: #FFFFFF;
+
+  section {
+
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+}
+
+#first-project {
+  height: 370px;
+  width: 100%;
+  background-color: #455560;
+}
+
+#first-project-image {
+  width: 821px;
+  height: 370px;
+  padding: 0 0px;
+}
+
+h1#first-project-logo {
+  background: image-url("closeoutbike_img.png") no-repeat;
+  margin-left: 100px;
+  width: 721px;
+  height: 295px;
+  position: absolute;
+  bottom: -15px;
+}
+
+#first-project-description{
+  float: left;
+  margin-left: 10px;
+  margin-top: 80px;
+  width: 380px;
+}
+
+#second-project {
+  height: 370px;
+  width: 100%;
+  background-color: #75c6b2;
+}
+
+#second-project-description{
+  float: left;
+  margin-left: 100px;
+  margin-top: 80px;
+  width: 330px;
+  padding: 0 0px;
+}
+
+#second-project-image {
+  width: 721px;
+  margin-right: 100px;
+  height: 370px;
+  padding: 0 0px;
+}
+
+h1#second-project-logo {
+  background: image-url("mobilizeart_img.png") no-repeat;
+  width: 721px;
+  height: 295px;
+  position: absolute;
+  bottom: -15px;
+}
+
+#third-project {
+  height: 370px;
+  width: 100%;
+  background-color: #164d67;
+}
+
+#third-project-image {
+  width: 821px;
+  height: 370px;
+  padding: 0 0px;
+}
+
+h1#third-project-logo {
+  background: image-url("gigdog_img.png") no-repeat;
+  margin-left: 100px;
+  width: 721px;
+  height: 295px;
+  position: absolute;
+  bottom: -15px;
+}
+
+#third-project-description {
+  float: left;
+  margin-left: 10px;
+  margin-top: 80px;
+  width: 380px;
+}
+
+#fourth-project {
+  height: 370px;
+  width: 100%;
+  background-color: #a5c675;
+}
+
+#fourth-project-description{
+  float: left;
+  margin-left: 100px;
+  margin-top: 80px;
+  width: 330px;
+  padding: 0 0px;
+}
+
+#fourth-project-image {
+  width: 721px;
+  margin-right: 100px;
+  height: 370px;
+  padding: 0 0px;
+}
+
+h1#fourth-project-logo {
+  background: image-url("greeneggs_img.png") no-repeat;
+  width: 721px;
+  height: 295px;
+  position: absolute;
+  bottom: -15px;
+}
+
+#site-links {
+  height: 370px;
+  width: 100%;
+  background-color: #FFFFFF;
+
+  section {
+
+    margin-left: 10%;
+    width: 80%;
+  }
+
+  h2 { 
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+}
+
+
 .graytext {
+
   display: block;
   color: $gray;
   font-family: "Droid Serif", serif;
