--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -17,7 +17,8 @@ h2 {
 }
 
 #content {
-  margin-top: 50px;
+  margin-top: 110px;
+  width: 100%;
 }
 
 body {
@@ -35,7 +36,7 @@ body {
 
 h1#logo {
   margin-top: 0;
-  left: 0;
+  margin-left: 180px;
 }
 
 h1#logo.no-animation {
@@ -49,24 +50,44 @@ h1#logo.no-animation {
 }
 
 h1#logo a {
-  width: 261px;
-  height: 55px;
+  width: 75px;
+  height: 75px;
   background: image-url("logo.png") no-repeat;
   float: left;
-  margin-top: 45px;
+  margin-top: 13px;
 }
 
-h1#logo:hover a {
-  background-position: 0px -55px;
-}
-
-h1#logo-light a {
-  background: image-url("logo-light.png") no-repeat;
-  width: 261px;
-  height: 55px;
+#logo-grey a {
+  background: image-url("logo_grey.png") no-repeat;
+  width: 75px;
+  height: 75px;
   float: left;  
-  margin-top: 140px;
 }
+
+#twitter-logo {
+  margin: 0 0px;
+}
+
+#facebook-logo {
+  margin: 0 0px;
+}
+
+#twitter-logo a {
+  background: image-url("footer-twitter.png") no-repeat;
+  width: 75px;
+  height: 50px;
+  float: left;
+}
+
+#facebook-logo a {
+  background: image-url("footer-facebook.png") no-repeat;
+  width: 75px;
+  height: 50px;
+  float: left;  
+}
+
+
+
 
 
 h1#logo-light:hover a {
@@ -74,7 +95,7 @@ h1#logo-light:hover a {
 }
 
 section {
-  padding: 90px 0 80px;
+  padding: 50px 0 80px;
 }
 
 section p {
@@ -86,8 +107,29 @@ section p a {
   color: #fcb040;
 }
 
-#about, #projects, #quote {
+#about, #projects {
   background: #f6f6f6;
+}
+
+#together {
+  background: #f6f6f6;
+  height: 150px;
+
+}
+
+#heroes {
+
+  width: 700px;
+  margin-left: 100px;
+
+  h3 {
+    color: #535353;
+  }
+}
+
+#work-together {
+  float: left;
+  width: 400px;
 }
 
 #blog-section {
@@ -131,12 +173,13 @@ div.dialog {
 
 #header {
   width: 100%;
+  height: 110px;
   background: #FFFFFF;
   border-bottom: 1px solid #e9e9e9;
-  padding-bottom: 40px;
+  padding-bottom: 12px;
   z-index: 10;
   position: fixed;
-  margin-top: -50px;
+  margin-top: -110px;
 }
 
 #header-content {
@@ -145,7 +188,8 @@ div.dialog {
 
 nav ul {
   float: right;
-  margin-top: 48px;
+  margin-top: 37px;
+  margin-right: 180px;
 }
 
 nav ul li {
@@ -155,9 +199,10 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #9f9f9f;
+  color: #525252;
+  text-transform: uppercase;
+  font-family: "Merriweather Sans", Georgia;
   font-size: 14px;
-  font-weight: bold;
 }
 
 nav ul a.active {
@@ -290,6 +335,49 @@ footer .small-line {
   background: $dark-blue;
 }
 
+#footer-logo {
+  width: 100px;
+  margin-left: 100px;
+}
+
+#location {
+  width: 200px;
+  float: left;
+
+  h3 {
+    font-size: 12px;
+    font-family: "Merriweather Sans", sans-serif;
+    text-transform: uppercase;
+    color: #707070;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    line-height: 1.1;
+  }
+
+  h4 {
+    font-size: 11px;
+    font-family: "Merriweather Sans", sans-serif;
+    font-weight: normal;
+    text-transform: none;
+    color: #B8B8B8;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    line-height: 1.1;
+  }
+
+  h5 {
+    font-size: 11px;  
+    font-family: "Merriweather Sans", sans-serif;
+    font-weight: bold;
+    text-transform: none;
+    color: #B8B8B8;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    line-height: 1.1;
+  }
+}
+
+
 #footer-tweet h2 {
     font-family: 'PT Sans', sans-serif;
     font-size: 18px;
@@ -339,7 +427,7 @@ code {
 
 /* button classes */
 .btn {
-  width: 201px;
+  width: 202px;
   height: 51px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -381,7 +469,7 @@ code {
 }
 
 .btn.top-margin-small {
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 .btn.orange {  
@@ -403,7 +491,9 @@ code {
 }
 
 .btn.blue {
-  background-color: #00abed;
+  background-color: #38A8CC;
+  width: 300px;
+  height: 60px;
 }
 
 .btn.blue:hover {
@@ -455,7 +545,7 @@ a.blog-link:hover {
 
 footer {
   background: #2f2f2f;
-  padding: 30px 0px 90px;
+  padding: 50px 0px 90px;
   color: #818181;
 }
 
