--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -25,16 +25,39 @@ a:hover {
 }
 
 h1 {
-  font-size:48px;
-  color: #535353;
+  margin-top: 100px;
+  font-family: "Merriweather Sans", serif;
   font-weight: bold;
-	text-align: center;
-	text-transform: uppercase;	
+  font-size: 42px;
+  color: #535353;
+  text-align: center;
+} 
+
+h2 {
+  margin-top: 60px;
+  font-family: "Merriweather", serif;
+  font-size: 24px;
+  line-height: 27px;
+  color: #929292;
+  text-align: center;
+  font-weight: normal;
+} 
+
+h2 a {
+  color: #38A8CC;
+  text-decoration: underline;
 }
 
 h3 {
-	font-size: 18px;
-	line-height: 30px;
-	color: #545454;
-	text-transform: uppercase;
+	font-size: 30px;
+  font-family: "Merriweather Sans", sans-serif;
+  font-weight: bold;
+	color: #FFFFFF;
+}
+
+h4 {
+  font-size: 16px;
+  font-family: "Merriweather", serif;
+  line-height: 28px;
+  color: #FFFFFF;
 }
