--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -5,7 +5,7 @@
 
 %dl.tabs.message-tabs
   %dd.active.left-tab
-    %a{:href => "#quote"}
+    %a{:href => "#request"}
       %h5 REQUEST A QUOTE
       %p I need help building something awesome
   %dd.right-tab
