--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,6 @@
         - if admin_signed_in?
           = render "layouts/admin_menu"
         = render "layouts/header"
-      %div#content.row
+      %div#content
         = yield
     = render "layouts/footer"
