--- a/app/views/shared/_fonts.html.haml
+++ b/app/views/shared/_fonts.html.haml
@@ -1,1 +1,3 @@
 = stylesheet_link_tag "http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Droid+Serif"
+= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Merriweather+Sans"
+= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Merriweather"
