--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -11,8 +11,8 @@ h1, h2, h3, h4, h5 {
   margin-bottom:14px;
   text-rendering: optimizeLegibility;
   line-height: 1.3;
-  font-weight: bold; 
   font-style: normal;
+  font-weight: normal;
   color: #535353;
 }
 
@@ -60,4 +60,5 @@ h4 {
   font-family: "Merriweather", serif;
   line-height: 28px;
   color: #FFFFFF;
+  font-weight: regular;
 }
