--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,43 +1,43 @@
 %article#together
-  %section.row
-    #heroes.column.two
+  #heroes.row
+    .column.eight
       %h3 We are a distributed team of superheroes.
-    #work-together.column.two
+    #work-together.column.four
       = button_to "let's work together", contact_path(:anchor => "request"), :class => "btn blue center top-margin-small", :method => :get
 %footer.container
   .row
-    #footer-logo.column.five
+    #footer-logo.column.three
       #logo-grey
         %a{:href => root_path}
-    #location.column.five
+    #location.column.two
       %h3 Boulder
       %br
       %h4 3080 Valmont Rd Suite 280
       %h4 Boulder, CO 80301
       %br
       %h5 info@coshx.com
-    #location.column.five
+    #location.column.two
       %h3 Charlottesville
       %br
       %h4 1110 East Market St Suite N7
       %h4 Charlottesville, VA 22902
       %br
       %h5 info@coshx.com
-    #location.column.five
+    #location.column.two
       %h3 San Francisco
       %br
       %h4 972 Mission Street, 5th Floor
       %h4 San Francisco, CA 94103
       %br
       %h5 info@coshx.com
-    #location.column.five
+    #location.column.two
       %h3 Austin
       %br
       %h4 701 Brazos St, Suite 1601
       %h4 Austin, TX 78701
       %br
       %h5 info@coshx.com
-    #location.column.five
+    #location.column.one
       %h3 Social
       %br
       #twitter-logo.row
