--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -128,6 +128,16 @@ section p a {
   }
 }
 
+#heart-icon {
+  background: image-url("heart.png") no-repeat;
+  display: block;
+  height: 80px;
+  width: 30px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto
+}
+
 #work-together {
   float: left;
  }
