--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -47,3 +47,5 @@
   .row
     %h1 You want to see more?
     %h2 Well you can check out our #{link_to "portfolio page", projects_path}. You can get to know us #{link_to "here", about_path}. Read our thoughts along #{link_to "the Journey", blog_posts_path} and find our about possible new #{link_to "open positions", jobs_path} on our team.
+  .row
+    #heart-icon
