--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -37,10 +37,11 @@
       %h4 Austin, TX 78701
       %br
       %h5 info@coshx.com
-    #location.column.one
+    #social.column.one
       %h3 Social
       %br
-      #twitter-logo.row
+      #twitter-logo
         %a{:href => "http://www.twitter.com/coshxlabs"}
-      #facebook-logo.row
+      %br
+      #facebook-logo
         %a{:href => "http://www.facebook.com/coshxlabs"}
